<resources>
    <string name="app_name">TestApp</string>
    <string name="email">Email</string>
    <string name="enter_email">введите email</string>
    <string name="password">Пароль</string>
    <string name="enter_password">введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="id">Ваш ID:</string>
    <string name="log_out">Выйти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>